fixed learnr logo not showing issue

--- a/static/lectures/lecture1a/css/logo.css
+++ b/static/lectures/lecture1a/css/logo.css
@@ -1,4 +1,5 @@
 .tutorialTitle:before {
-  content: url("../img/M.png");
+  content: url("../images/M.png");
   display: block;
+  width: 100%;
 }
